--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="error-box">
-                    <h2>Ooooops!</h2>
+                    <h2>Ooooops!!!</h2>
                     <p>We can't seem to find a page you are looking for...</p>
                     <div class="input-box">
                         <input type="text" placeholder="Search...">
